--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "module": "dist/three-particles.esm.js",
   "browser": "dist/three-particles.umd.js",
   "scripts": {
-    "build": "rollup -c",
+    "doc": "jsdoc -c jsdoc.conf.json",
+    "build": "rollup -c --environment BUILD:production",
     "dev": "rollup -c -w",
     "test": "node test/test.js",
     "pretest": "npm run build"
   },
   "files": [
-    "dist"
+    "dist",
+    "src",
+    "LICENSE",
+    "README.md"
   ],
   "repository": {
     "type": "git",
@@ -35,9 +39,14 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-multi-entry": "^4.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
+    "eslint": "^7.17.0",
+    "eslint-config-google": "^0.14.0",
+    "jsdoc": "^3.6.6",
     "rollup": "^2.36.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "three": "^0.124.0"
+    "rollup-plugin-eslint": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "three": "^0.124.0"
+  }
 }
