--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "^7.17.0",
     "eslint-config-google": "^0.14.0",
     "jsdoc": "^3.6.6",
+    "mocha": "^8.2.1",
     "rollup": "^2.36.1",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-terser": "^7.0.2"
