--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on: push
 jobs:
   build:
     runs-on: ${{ matrix.os }}
-    if: "!contains(github.event.head_commit.message, '[skip-ci]')"
+    if: "!startsWith(github.event.head_commit.message, 'ci:')"
     strategy:
       matrix:
         os: [ubuntu-latest]
