--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,9 +39,7 @@ jobs:
       - name: "Checkout source code"
         uses: actions/checkout@v2
         with:
-          ref: ${{ github.ref }}
-      - name: "cat package.json"
-        run: cat ./package.json
+          ref: "development"
       - name: "Setup Node.js"
         uses: actions/setup-node@v1
         with:
