--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,8 +38,8 @@ jobs:
     steps:
       - name: "Checkout source code"
         uses: actions/checkout@v2
-      - name: "cat package.json"
-        run: cat ./package.json
+        with:
+          ref: "development"
       - name: "Setup Node.js"
         uses: actions/setup-node@v1
         with:
