Rebase development instead of merge

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,13 +31,16 @@ jobs:
         env:
           NEW_TAG: ${{ steps.version-bump.outputs.newTag }}
         run: echo "new tag $NEW_TAG"
-      - name: "Merge main into development"
-        uses: mtanzi/action-automerge@v1
-        id: merge
-        with:
-         github_token: ${{ github.token }}
-         source: "main"
-         target: "development"
+      - name: "Reset development to master"
+        env:
+          GITHUB_ORIGIN: "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git"
+          GITHUB_ACTOR: ${{ github.actor }}
+        run: |
+          git config --global user.name "$GITHUB_ACTOR"
+          git clone $GITHUB_ORIGIN .
+          git checkout development
+          git pull --rebase origin master
+          git push $GITHUB_ORIGIN
   publish:
     name: "Publish on NPMJS"
     runs-on: ubuntu-latest
