--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,8 +57,9 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: jsdocs # The folder the action should deploy.
-          CLEAN: true # Automatically remove deleted files from the deploy branch
+          BRANCH: gh-pages
+          FOLDER: jsdocs
+          CLEAN: false
+          SINGLE_COMMIT: true
           TARGET_FOLDER: jsdocs
-          COMMIT_MESSAGE: 'Update docs'
+          COMMIT_MESSAGE: 'ci: Update docs'
