--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 name: CI
 
-on: push
+on:
+  push:
+    branches-ignore:
+      - 'main' # Only tested code can be merged to main.
 
 jobs:
   build:
