--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,17 @@ jobs:
       - run: |
           npm ci
           npm run test
+  bump-version:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12'
+      - name: Run version bump
+        run: |
+          npm ci
+          npm run bump-version
