--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "rollup -c -w",
     "test": "mocha",
     "pretest": "npm run build",
-    "doc": "node makefile.js doc"
+    "doc": "node makefile.js doc",
+    "bump-version": "node makefile.js bumpVersion",
+    "push-version-tag": "node makefile.js pushVersionTag"
   },
   "files": [
     "dist",
@@ -46,7 +48,8 @@
     "mocha": "^8.2.1",
     "rollup": "^2.36.1",
     "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "semver": "^7.3.4"
   },
   "dependencies": {
     "three": "^0.124.0"
