--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,12 +11,12 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node-version: [12.x, 14.x, 15.x]
+        node-version: [14.x]
         include:
           - os: windows-latest
-            node: "12.x"
+            node: "14.x"
           - os: macos-latest
-            node: "12.x"
+            node: "14.x"
 
     steps:
       - uses: actions/checkout@v2
@@ -36,7 +36,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
-          node-version: '12'
+          node-version: '14'
       - name: Run version bump
         run: |
           npm ci
