Remove .idea folder

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "files": [
     "dist",
     "src",
+    "generatedSrc",
     "LICENSE",
     "README.md"
   ],
@@ -40,7 +41,6 @@
   "type": "module",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-multi-entry": "^4.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "eslint": "^7.17.0",
     "eslint-config-google": "^0.14.0",
