--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,9 +2,9 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es2016",
-        "jsx": "preserve",
         "strictFunctionTypes": true,
-        "checkJs": true
+        "checkJs": true,
+        "resolveJsonModule": true
     },
     "exclude": [
         "node_modules",
