--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "editor.minimap.maxColumn": 80,
   "editor.wordWrap": "wordWrapColumn",
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "editor.rulers": [80]
 }
