--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@rollup/plugin-node-resolve": "^11.0.1",
     "eslint": "^7.17.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-plugin-jsdoc": "^31.2.2",
     "jsdoc": "^3.6.6",
     "mocha": "^8.2.1",
     "rollup": "^2.36.1",
