--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -17,5 +17,5 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git pull --unshallow
           git checkout dev
-          git pull origin main
+          git pull origin main --ff-only
           git push
