--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-jsdoc": "^31.2.2",
     "jsdoc": "^3.6.6",
+    "jsdoc-tsimport-plugin": "^1.0.0",
     "mocha": "^8.2.1",
     "rollup": "^2.36.1",
     "rollup-plugin-eslint": "^7.0.0",
