--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
+    "@rollup/plugin-replace": "^2.3.4",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.17.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-jsdoc": "^31.2.2",
@@ -51,7 +54,8 @@
     "rollup": "^2.36.1",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "semver": "^7.3.4"
+    "semver": "^7.3.4",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "three": "^0.124.0"
