Add sanitize data methods

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
   "javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": false,
   "javascript.format.semicolons": "insert",
   "javascript.preferences.quoteStyle": "single",
-  "npm.enableRunFromFolder": true
+  "npm.enableRunFromFolder": true,
+  "liveServer.settings.port": 5501
 }
