Set modules to threeParticles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
   "javascript.format.semicolons": "insert",
   "javascript.preferences.quoteStyle": "single",
   "npm.enableRunFromFolder": true,
-  "liveServer.settings.port": 5501
+  "liveServer.settings.port": 5501,
+  "eslint.options": {
+    "configFile": "./.eslintrc.json"
+  },
 }
