--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.12",
   "description": "WIP - A particle engine for THREE JS.",
   "main": "dist/three-particles.cjs.js",
-  "module": "dist/three-particles.esm.js",
+  "module": "dist/three-particles.es6.js",
   "browser": "dist/three-particles.umd.js",
+  "unpkg": "dist/three-particles.umd.js",
   "scripts": {
     "build": "rollup -c --environment BUILD:production",
+    "buildDev": "rollup -c",
     "dev": "rollup -c -w",
     "test": "mocha --recursive",
     "pretest": "npm run build",
@@ -44,7 +46,6 @@
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@rollup/plugin-babel": "^5.2.2",
-    "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-multi-entry": "^4.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-replace": "^2.3.4",
@@ -54,7 +55,6 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-jsdoc": "^31.2.2",
     "jsdoc": "^3.6.6",
-    "jsdoc-tsimport-plugin": "^1.0.0",
     "mocha": "^8.2.1",
     "rollup": "^2.36.1",
     "rollup-plugin-eslint": "^7.0.0",
