--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@rollup/plugin-replace": "^2.3.4",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "chai": "^4.2.0",
     "eslint": "^7.17.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-jsdoc": "^31.2.2",
