--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "test": "mocha --recursive",
     "pretest": "npm run build",
     "doc": "node makefile.js doc",
-    "tag": "node makefile.js tag"
+    "tag": "node makefile.js tag",
+    "precommit-msg": "echo 'Pre-commit checks...' && exit 0"
   },
+  "pre-commit": [ "precommit-msg", "test" ],
   "files": [
     "dist",
     "src",
@@ -57,6 +59,7 @@
     "jsdoc": "^3.6.6",
     "jsdoc-tsimport-plugin": "^1.0.4",
     "mocha": "^8.2.1",
+    "pre-commit": "^1.2.2",
     "rollup": "^2.36.1",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-terser": "^7.0.2",
