--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "three-particles",
-  "version": "0.1.14",
+  "version": "0.1.15",
   "description": "WIP - A particle engine for THREE JS.",
   "main": "dist/three-particles.cjs.js",
   "module": "dist/three-particles.es6.js",
@@ -16,7 +16,10 @@
     "tag": "node makefile.js tag",
     "precommit-msg": "echo 'Pre-commit checks...' && exit 0"
   },
-  "pre-commit": [ "precommit-msg", "test" ],
+  "pre-commit": [
+    "precommit-msg",
+    "test"
+  ],
   "files": [
     "dist",
     "src",
