--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,26 +4,32 @@ on:
   push:
     branches-ignore:
       - 'main' # Only tested code can be merged to main.
+      - 'gh-pages'
+
+permissions:
+  contents: read
 
 jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        node-version: [14.x]
-        include:
-          - os: windows-latest
-            node: "14.x"
-          - os: macos-latest
-            node: "14.x"
+        os: [windows-latest, macos-latest]
+        node-version: [20.x]
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Build and test ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      - run: |
-          npm ci
-          npm run test
+          cache: npm
+
+      - name: Install dependencies
+        run: npm ci
+        if: hashFiles('package-lock.json') != ''
+
+      - name: Run tests
+        run: npm test
