--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "three-particles",
-  "version": "0.1.13",
+  "version": "0.2.0",
   "description": "WIP - A particle engine for THREE JS.",
-  "main": "dist/three-particles.cjs.js",
-  "module": "dist/three-particles.es6.js",
-  "browser": "dist/three-particles.umd.js",
-  "unpkg": "dist/three-particles.umd.js",
+  "main": "dist/index.js",
+  "types": "dist/types/5.8",
   "scripts": {
-    "build": "rollup -c --environment BUILD:production",
-    "buildDev": "rollup -c",
-    "dev": "rollup -c -w",
-    "test": "mocha --recursive",
-    "pretest": "npm run build",
-    "doc": "node makefile.js doc",
-    "tag": "node makefile.js tag"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "test": "jest",
+    "build": "tsx buildSrc/build.ts && tsc",
+    "watch": "tsx buildSrc/build.ts -w"
   },
   "files": [
     "dist",
@@ -41,30 +37,27 @@
   "homepage": "https://github.com/polyforest/three-particles#readme",
   "type": "module",
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@rollup/plugin-babel": "^5.2.2",
-    "@rollup/plugin-multi-entry": "^4.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "@rollup/plugin-replace": "^2.3.4",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "chai": "^4.2.0",
-    "eslint": "^7.17.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-jsdoc": "^31.2.2",
-    "jsdoc": "^3.6.6",
-    "jsdoc-tsimport-plugin": "^1.0.4",
-    "mocha": "^8.2.1",
-    "rollup": "^2.36.1",
-    "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "semver": "^7.3.4",
-    "type-fest": "^0.20.2",
-    "typescript": "^4.1.3"
+    "@eslint/js": "^9.22.0",
+    "@types/jest": "^29.5.14",
+    "@types/three": "^0.174.0",
+    "esbuild": "^0.25.1",
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.5.3",
+    "ts-jest": "^29.2.6",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1"
+  },
+  "overrides": {
+    "globals": "^16.0.0"
+  },
+  "peerDependencies": {
+    "three": "^0.174.0"
   },
   "dependencies": {
-    "three": "^0.124.0"
+    "@types/lodash": "^4.17.16",
+    "lodash": "^4.17.21"
   }
 }
