--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,8 @@ name: CI
 
 on:
   push:
-    branches-ignore:
-      - 'main' # Only tested code can be merged to main.
-      - 'gh-pages'
+    branches:
+      - 'main'
 
 permissions:
   contents: read
@@ -13,8 +12,9 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        os: [windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         node-version: [20.x]
 
     steps:
