--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,14 +4,15 @@ on:
   release:
     types: [published]
 
-permissions:
-  contents: read
-  id-token: write
-
 jobs:
   publish:
     name: "Publish"
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      id-token: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -22,6 +23,7 @@ jobs:
           node-version: 20
           cache: npm
           registry-url: 'https://registry.npmjs.org/'
+          always-auth: true
 
       - name: Install dependencies
         run: npm ci
