--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # important for lerna to detect tags
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -28,6 +30,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Create versions & changelogs
+        run: npx lerna version --yes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build
         run: |
           npm run build
@@ -43,7 +49,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
-          folder: www/dist
-          clean: false
+          folder: www
+          clean: true
           single-commit: true
-          commit-message: 'ci: Update www'
+          commit-message: 'ci: update www'
