--- a/package.json
+++ b/package.json
@@ -1,63 +1,34 @@
 {
-  "name": "three-particles",
-  "version": "0.2.0",
-  "description": "WIP - A particle engine for THREE JS.",
-  "main": "dist/index.js",
-  "types": "dist/types/5.8",
-  "scripts": {
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "test": "jest",
-    "build": "tsx buildSrc/build.ts && tsc",
-    "watch": "tsx buildSrc/build.ts -w"
-  },
-  "files": [
-    "dist",
-    "src",
-    "generatedSrc",
-    "LICENSE",
-    "README.md"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/polyforest/three-particles.git"
-  },
-  "keywords": [
-    "three.js",
-    "particle",
-    "particles",
-    "particle engine",
-    "poly forest"
-  ],
-  "author": "Nicholas Bilyk (https://www.polyforest.com)",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/polyforest/three-particles/issues"
-  },
-  "homepage": "https://github.com/polyforest/three-particles#readme",
-  "type": "module",
-  "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@types/jest": "^29.5.14",
-    "@types/three": "^0.174.0",
-    "esbuild": "^0.25.1",
-    "eslint": "^9.22.0",
-    "globals": "^16.0.0",
-    "jest": "^29.7.0",
-    "prettier": "^3.5.3",
-    "ts-jest": "^29.2.6",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.1"
-  },
-  "overrides": {
-    "globals": "^16.0.0"
-  },
-  "peerDependencies": {
-    "three": "^0.174.0"
-  },
-  "dependencies": {
-    "@types/lodash": "^4.17.16",
-    "lodash": "^4.17.21"
-  }
+    "name": "three-particles-composite",
+    "private": true,
+    "type": "module",
+    "devDependencies": {
+        "@types/jest": "^29.5.14",
+        "esbuild": "^0.25.1",
+        "eslint": "^9.22.0",
+        "globals": "^16.0.0",
+        "jest": "^29.7.0",
+        "lerna": "^8.2.1",
+        "prettier": "^3.5.3",
+        "ts-jest": "^29.2.6",
+        "tsx": "^4.19.3",
+        "typescript": "^5.8.2",
+        "typescript-eslint": "^8.26.1"
+    },
+    "scripts": {
+        "@eslint/js": "^9.22.0",
+        "lint": "lerna run lint",
+        "lint:write": "lerna run lint:write",
+        "build": "lerna run build",
+        "watch": "lerna run watch --parallel",
+        "test": "lerna run test",
+        "serve": "npm run build && serve -s www"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/polyforest/three-particles.git"
+    },
+    "workspaces": [
+        "packages/*"
+    ]
 }
