--- a/lerna.json
+++ b/lerna.json
@@ -1,13 +1,14 @@
 {
-  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "version": "0.3.0",
-  "packages": ["packages/*"],
-  "command": {
-    "publish": {
-      "message": "chore(release): publish"
-    },
-    "version": {
-      "conventionalCommits": true
+    "$schema": "node_modules/lerna/schemas/lerna-schema.json",
+    "version": "0.3.0",
+    "packages": ["packages/*"],
+    "command": {
+        "version": {
+            "conventionalCommits": true,
+            "createRelease": "github"
+        },
+        "publish": {
+            "message": "chore(release): publish %v"
+        }
     }
-  }
 }
