--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,9 @@ name: CI
 
 on:
   push:
-    branches:
-      - 'main'
+    branches-ignore:
+      - 'main' # main is protected
+      - 'gh-pages'
 
 permissions:
   contents: read
