chore(ci): add version

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "three-particles-composite",
+    "version": "0.2.0",
     "private": true,
     "type": "module",
     "devDependencies": {
