--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@polyforest/three-particles-example",
-    "version": "0.2.0",
+    "version": "0.3.1",
     "main": "index.js",
     "private": true,
     "scripts": {
@@ -16,7 +16,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
-        "three-particles": "*"
+        "three-particles": "^0.3.1"
     },
     "devDependencies": {
         "@types/fs-extra": "^11.0.4",
