feat: material loader
wip - adds material loader to particle effect loader

--- a/packages/three-particles/package.json
+++ b/packages/three-particles/package.json
@@ -52,6 +52,7 @@
     },
     "dependencies": {
         "@types/lodash": "^4.17.16",
-        "lodash": "^4.17.21"
+        "lodash": "^4.17.21",
+        "type-fest": "^4.38.0"
     }
 }
