--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "jest": "^29.7.0",
         "lerna": "^8.2.1",
         "prettier": "^3.5.3",
+        "sass-embedded": "^1.89.2",
         "three": "^0.174.0",
         "ts-jest": "^29.2.6",
         "tsx": "^4.19.3",
