--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "type": "module",
     "devDependencies": {
         "@types/jest": "^29.5.14",
+        "@vitejs/plugin-react": "^4.7.0",
         "esbuild": "^0.25.1",
         "eslint": "^9.22.0",
         "globals": "^16.0.0",
@@ -17,7 +18,8 @@
         "ts-jest": "^29.2.6",
         "tsx": "^4.19.3",
         "typescript": "^5.8.2",
-        "typescript-eslint": "^8.26.1"
+        "typescript-eslint": "^8.26.1",
+        "vite": "^7.0.6"
     },
     "scripts": {
         "@eslint/js": "^9.22.0",
