--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -7,9 +7,8 @@
         "lint:write": "npm run prettier:write && eslint . --fix",
         "prettier:check": "prettier . --ignore-path ../../.prettierignore --cache --check",
         "prettier:write": "prettier . --ignore-path ../../.prettierignore --cache --write",
-        "build": "tsx buildSrc/build.ts && tsc --noEmit",
-        "watch": "tsx buildSrc/build.ts -w",
-        "serve": "http-server dist"
+        "build": "vite build",
+        "dev": "vite"
     },
     "author": "Nicholas Bilyk",
     "license": "ISC",
