chore: add mui components

--- a/package.json
+++ b/package.json
@@ -38,5 +38,10 @@
     },
     "workspaces": [
         "packages/*"
-    ]
+    ],
+    "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
+        "@mui/material": "^7.3.1"
+    }
 }
