--- a/packages/particle-editor/package.json
+++ b/packages/particle-editor/package.json
@@ -15,6 +15,7 @@
     "license": "ISC",
     "description": "React-based editor for three-particles",
     "dependencies": {
+        "@mui/icons-material": "^7.3.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "three-particles": "*"
