--- a/packages/particle-editor/package.json
+++ b/packages/particle-editor/package.json
@@ -15,10 +15,11 @@
     "license": "ISC",
     "description": "React-based editor for three-particles",
     "dependencies": {
-        "@mui/icons-material": "^7.3.0",
-        "@mui/material": "^7.3.1",
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
+        "@mui/icons-material": "^7.3.0",
+        "@mui/material": "^7.3.1",
+        "re-resizable": "^6.11.2",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "three-particles": "*"
