chore: fix lint script

--- a/packages/particle-editor/package.json
+++ b/packages/particle-editor/package.json
@@ -3,12 +3,12 @@
     "version": "0.4.2",
     "private": true,
     "scripts": {
-        "lint": "npm run prettier:chexck && eslint .",
+        "lint": "npm run prettier:check && eslint .",
         "lint:write": "npm run prettier:write && eslint . --fix",
         "prettier:check": "prettier . --ignore-path ../../.prettierignore --cache --check",
         "prettier:write": "prettier . --ignore-path ../../.prettierignore --cache --write",
         "typecheck": "tsc --noEmit",
-        "build": "vite build",
+        "build": "vite build && npm run typecheck",
         "dev": "vite"
     },
     "author": "Nicholas Bilyk",
