chore: set versions to independent
Configured Lerna to use independent versioning, allowing only changed packages to be version-bumped and published. Updated lerna.json by setting "version" to "independent" without altering existing package.json files or GitHub Actions workflows. This change ensures the engine package is only published when it is modified.

--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -3,6 +3,7 @@
     "version": "0.6.0",
     "private": true,
     "scripts": {
+        "clean": "rimraf dist",
         "lint": "npm run prettier:check && eslint .",
         "lint:write": "npm run prettier:write && eslint . --fix",
         "prettier:check": "prettier . --ignore-path ../../.prettierignore --cache --check",
