--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
     "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-    "version": "0.6.0",
+    "version": "independent",
     "packages": ["packages/*"],
     "command": {
         "version": {
