--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vite": "^7.0.6"
     },
     "scripts": {
+        "clean": "rimraf www && lerna run clean",
         "@eslint/js": "^9.22.0",
         "lint": "lerna run lint",
         "lint:write": "lerna run lint:write",
