--- a/packages/particle-editor/package.json
+++ b/packages/particle-editor/package.json
@@ -3,6 +3,7 @@
     "version": "0.6.0",
     "private": true,
     "scripts": {
+        "clean": "rimraf dist",
         "lint": "npm run prettier:check && eslint .",
         "lint:write": "npm run prettier:write && eslint . --fix",
         "prettier:check": "prettier . --ignore-path ../../.prettierignore --cache --check",
@@ -23,13 +24,14 @@
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "react-router-dom": "^7.8.2",
-        "three-particles": "^0.6.0",
+        "three-particles": "*",
         "zustand": "^5.0.8"
     },
     "devDependencies": {
         "@types/fs-extra": "^11.0.4",
         "@types/loglevel": "^1.5.4",
         "@types/react": "^19.1.9",
-        "@types/react-dom": "^19.1.7"
+        "@types/react-dom": "^19.1.7",
+        "rimraf": "^4.4.1"
     }
 }
