--- a/packages/particle-editor/package.json
+++ b/packages/particle-editor/package.json
@@ -25,6 +25,7 @@
         "react-dom": "^19.1.1",
         "react-router-dom": "^7.8.2",
         "three-particles": "*",
+        "type-fest": "^4.41.0",
         "zustand": "^5.0.8"
     },
     "devDependencies": {
