--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "type": "module",
     "devDependencies": {
         "@types/jest": "^29.5.14",
-        "@vitejs/plugin-react": "^4.7.0",
         "esbuild": "^0.25.1",
         "eslint": "^9.22.0",
         "globals": "^16.0.0",
@@ -13,8 +12,6 @@
         "jest": "^29.7.0",
         "lerna": "^8.2.1",
         "prettier": "^3.5.3",
-        "sass-embedded": "^1.89.2",
-        "three": "^0.174.0",
         "ts-jest": "^29.2.6",
         "tsx": "^4.19.3",
         "typescript": "^5.8.2",
@@ -40,9 +37,5 @@
     "workspaces": [
         "packages/*"
     ],
-    "dependencies": {
-        "@emotion/react": "^11.14.0",
-        "@emotion/styled": "^11.14.1",
-        "@mui/material": "^7.3.1"
-    }
+    "dependencies": {}
 }
