--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
         "typescript-eslint": "^8.26.1",
         "vite": "^7.0.6"
     },
+    "optionalDependencies": {
+        "@rollup/rollup-linux-x64-gnu": "^4.52.0"
+    },
     "scripts": {
         "clean": "rimraf www && lerna run clean",
         "@eslint/js": "^9.22.0",
