chore: update lerna.json config
updated config to work with newer versions of lerna

lerna no longer supports substitution strings for version

--- a/lerna.json
+++ b/lerna.json
@@ -5,10 +5,7 @@
     "command": {
         "version": {
             "conventionalCommits": true,
-            "createRelease": "github"
-        },
-        "publish": {
-            "message": "chore(release): publish %v"
+            "allowBranch": "main"
         }
     }
 }
