--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
         run: npm ci
 
       - name: Create versions & changelogs
-        run: npx lerna version --yes
+        run: npx lerna version --create-release github --yes
         env:
           GH_TOKEN: ${{ secrets.GH_PAT }}
 
