--- a/packages/three-particles/package.json
+++ b/packages/three-particles/package.json
@@ -42,8 +42,7 @@
     "homepage": "https://github.com/polyforest/three-particles#readme",
     "type": "module",
     "devDependencies": {
-        "@types/three": "^0.180.0",
-        "lerna": "^8.2.4"
+        "@types/three": "^0.181.0"
     },
     "overrides": {
         "globals": "^16.0.0"
@@ -54,6 +53,6 @@
     "dependencies": {
         "@types/lodash": "^4.17.20",
         "lodash": "^4.17.21",
-        "type-fest": "^4.41.0"
+        "type-fest": "^5.3.0"
     }
 }
