--- a/packages/three-particles/package.json
+++ b/packages/three-particles/package.json
@@ -8,12 +8,8 @@
         "access": "public"
     },
     "scripts": {
-        "lint": "npm run prettier:check && eslint .",
-        "lint:write": "npm run prettier:write && eslint . --fix",
-        "prettier:check": "prettier . --ignore-path ../../.prettierignore --cache --check",
-        "prettier:write": "prettier . --ignore-path ../../.prettierignore --cache --write",
         "test": "jest",
-        "build": "tsx buildSrc/build.ts && tsc && npm run lint",
+        "build": "tsx buildSrc/build.ts",
         "watch": "tsx buildSrc/build.ts -w"
     },
     "files": [
