--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "vite": "^7.0.6"
     },
     "optionalDependencies": {
-        "@rollup/rollup-linux-x64-gnu": "^4.52.0"
+        "@rollup/rollup-linux-x64-gnu": "^4.52.0",
+        "@rollup/rollup-win32-x64-msvc": "^4.52.0"
     },
     "scripts": {
         "clean": "rimraf www && lerna run clean",
