docs: add plain js example

--- a/package.json
+++ b/package.json
@@ -32,10 +32,9 @@
         "build": "lerna run build",
         "watch": "lerna run watch --parallel",
         "prewww": "lerna run build",
-        "www": "tsx ./buildSrc/build.ts",
         "test": "lerna run test",
         "validate": "lerna run build && lerna run lint && lerna run test",
-        "serve": "npm run www && http-server www"
+        "serve": "http-server www"
     },
     "repository": {
         "type": "git",
